--- a/Todolist/src/main/resources/templates/login.html
+++ b/Todolist/src/main/resources/templates/login.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Insert title here</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-<h1>Login Page</h1>
-
-<form th:action="@{/goto-signUp}" method="get">
-	<input type="submit" value="회원가입">
-</form>
-
+    <div class="login">
+        <h1>My ToDoList</h1>
+        <form action="" class="login-form">
+            <input type="text" placeholder="ID를 입력해주세요" />
+            <input type="password" placeholder="PW를 입력해주세요" />
+            <div class="btn-group">
+            	<button type="submit" class="login-btn">로그인</button>
+            	<button type="submit" class="signup-btn">회원가입</button>
+            </div>
+        </form>
+    </div>
+    
 </body>
 </html>
